--- a/ipa.html
+++ b/ipa.html
@@ -420,93 +420,97 @@ We implement a prototype of this model in Scala on top of an existing datastore,
 
 
 <p class="p noindent" data-line="119;out/introduction.mdk:35"><span data-line="119;out/introduction.mdk:35"></span>To provide good user experiences, modern datacenter applications and
-web services must balance many competing requirements.  Programmers
-need to preserve application correctness while minimizing response
-times; e.g., a web store must not double-charge for purchases and not
-keeping users waiting too long (e.g., Microsoft, Amazon and Google all
-note that every millisecond of latency translates to a loss in traffic
-and revenue<span data-line="119;out/introduction.mdk:41"></span>&nbsp;<span class="citations" style="target-element:bibitem">[<a href="#forrest09:slow" title="Brady Forrest. 
+web services must balance the competing requirements of application
+correctness and responsiveness. For example, a web store must not
+double-charge for purchases but also cannot keep users waiting too
+long (each additional millisecond of latency translates to a loss in
+traffic and revenue<span data-line="119;out/introduction.mdk:40"></span>&nbsp;<span class="citations" style="target-element:bibitem">[<a href="#forrest09:slow" title="Brady Forrest. 
 Bing and google agree: Slow pages lose users." class="bibref tex-tooltip localref" style="target-element:bibitem"><span class="cite-number">26</span></a>, <a href="#linden06:amazon" title="Greg Linden. 
-Make data useful." class="bibref tex-tooltip localref" style="target-element:bibitem"><span class="cite-number">36</span></a>]</span><span data-line="119;out/introduction.mdk:41"></span>).  Worse, programmers
-must maintain this balance in an unpredictable environment where a
-black and blue dress<span data-line="119;out/introduction.mdk:43"></span>&nbsp;<span class="citations" style="target-element:bibitem">[<a href="#buzzfeed-dress" title="Dao Nguyen. 
-What it&#39;s like to work on buzzfeed&#39;s tech team during record traffic." class="bibref tex-tooltip localref" style="target-element:bibitem"><span class="cite-number">42</span></a>]</span><span data-line="119;out/introduction.mdk:43"></span> or Justin Bieber
-<span data-line="119;out/introduction.mdk:44"></span><span class="citations" style="target-element:bibitem">[<a href="#bieber-instagram" title="Cade Metz. 
-How Instagram Solved Its Justin Bieber Problem, November 2015." class="bibref tex-tooltip localref" style="target-element:bibitem"><span class="cite-number">38</span></a>]</span><span data-line="119;out/introduction.mdk:44"></span> can change application performance in the blink of
+Make data useful." class="bibref tex-tooltip localref" style="target-element:bibitem"><span class="cite-number">36</span></a>]</span><span data-line="119;out/introduction.mdk:40"></span>). Worse,
+programmers must maintain this balance in an unpredictable environment
+where a black and blue dress<span data-line="119;out/introduction.mdk:42"></span>&nbsp;<span class="citations" style="target-element:bibitem">[<a href="#buzzfeed-dress" title="Dao Nguyen. 
+What it&#39;s like to work on buzzfeed&#39;s tech team during record traffic." class="bibref tex-tooltip localref" style="target-element:bibitem"><span class="cite-number">42</span></a>]</span><span data-line="119;out/introduction.mdk:42"></span> or Justin Bieber
+<span data-line="119;out/introduction.mdk:43"></span><span class="citations" style="target-element:bibitem">[<a href="#bieber-instagram" title="Cade Metz. 
+How Instagram Solved Its Justin Bieber Problem, November 2015." class="bibref tex-tooltip localref" style="target-element:bibitem"><span class="cite-number">38</span></a>]</span><span data-line="119;out/introduction.mdk:43"></span> can change application performance in the blink of
 an eye.
 </p>
-<p class="p indent" data-line="119;out/introduction.mdk:47"><span data-line="119;out/introduction.mdk:47"></span>Recognizing this trade-off, many existing storage systems support
-configureable consistency levels; some allow programmers to set the
-consistency of the entire store or each operation
-<span data-line="119;out/introduction.mdk:50"></span><span class="citations" style="target-element:bibitem">[<a href="#cassandra" title="Apache Software Foundation. 
+<p class="p indent" data-line="119;out/introduction.mdk:46"><span data-line="119;out/introduction.mdk:46"></span>Recognizing this trade-off, many existing storage systems support
+configurable consistency levels that allow programmers to set the
+consistency of individual operations
+<span data-line="119;out/introduction.mdk:49"></span><span class="citations" style="target-element:bibitem">[<a href="#cassandra" title="Apache Software Foundation. 
 Cassandra." class="bibref tex-tooltip localref" style="target-element:bibitem"><span class="cite-number">4</span></a>, <a href="#riak" title="Basho Technologies, Inc. 
 Riak." class="bibref tex-tooltip localref" style="target-element:bibitem"><span class="cite-number">11</span></a>, <a href="#li:12:redblue" title="Cheng Li, Daniel Porto, Allen Clement, Johannes Gehrke, Nuno Pregui&#231;a, and Rodrigo Rodrigues. 
 Making geo-replicated systems fast as possible, consistent when necessary. 
 In Presented as part of the 10th USENIX Symposium on Operating Systems Design and Implementation (OSDI 12), pages 265&#8211;278, Hollywood, CA, 2012. USENIX. 
 ISBN 978-1-931971-96-6. 
 URL https://&#8203;www.&#8203;usenix.&#8203;org/&#8203;conference/&#8203;osdi12/&#8203;technical-&#8203;sessions/&#8203;presentation/&#8203;li." class="bibref tex-tooltip localref" style="target-element:bibitem"><span class="cite-number">34</span></a>, <a href="#sovran:11:walter" title="Yair Sovran, Russell Power, Marcos&#160;K. Aguilera, and Jinyang Li. 
-Transactional storage for geo-replicated systems." class="bibref tex-tooltip localref" style="target-element:bibitem"><span class="cite-number">58</span></a>]</span><span data-line="119;out/introduction.mdk:50"></span>.  Ideally,
-programs would only weaken consistency guarantees when necessary to
-meet availability requirements (e.g., during a spike in traffic or
-datacenter failure), or when it does not impact the application<span data-line="119;out/introduction.mdk:53"></span>&#39;<span data-line="119;out/introduction.mdk:53"></span>s
-correctness guarantees (e.g., returning a slightly stale or estimated
-result is acceptable). Some storage systems support this type of
-adaptable consistency<span data-line="119;out/introduction.mdk:56"></span>&nbsp;<span class="citations" style="target-element:bibitem">[<a href="#stribling:09:wheelfs" title="Jeremy Stribling, Yair Sovran, Irene Zhang, Xavid Pretzer, Jinyang Li, M.&#160;Frans Kaashoek, and Robert Morris. 
+Transactional storage for geo-replicated systems." class="bibref tex-tooltip localref" style="target-element:bibitem"><span class="cite-number">58</span></a>]</span><span data-line="119;out/introduction.mdk:49"></span>. These allow
+programmers to weaken consistency guarantees only for data that is not
+critical to application correctness, retaining strong consistency for
+vital data. Some systems further allow adaptable consistency levels at
+runtime, where guarantees are only weakened when necessary to meet
+availability or performance requirements (e.g., during a spike in
+traffic or datacenter failure)<span data-line="119;out/introduction.mdk:55"></span>&nbsp;<span class="citations" style="target-element:bibitem">[<a href="#stribling:09:wheelfs" title="Jeremy Stribling, Yair Sovran, Irene Zhang, Xavid Pretzer, Jinyang Li, M.&#160;Frans Kaashoek, and Robert Morris. 
 Flexible, wide-area storage for distributed systems with WheelFS. 
 In Proceedings of the 6th USENIX Symposium on Networked Systems Design and Implementation (NSDI), NSDI&#39;09, pages 43&#8211;58, Berkeley, CA, USA, 2009. USENIX Association. 
 URL http://&#8203;dl.&#8203;acm.&#8203;org/&#8203;citation.&#8203;cfm?&#8203;id=&#8203;1558977.&#8203;1558981." class="bibref tex-tooltip localref" style="target-element:bibitem"><span class="cite-number">59</span></a>, <a href="#terry:13:slas" title="Douglas&#160;B. Terry, Vijayan Prabhakaran, Ramakrishna Kotla, Mahesh Balakrishnan, Marcos&#160;K. Aguilera, and Hussam Abu-Libdeh. 
 Consistency-based service level agreements for cloud storage. 
 In Proceedings of the Twenty-Fourth ACM Symposium on Operating Systems Principles - SOSP 13. ACM Press, 2013. 
-doi:10.1145/2517349.2522731." class="bibref tex-tooltip localref" style="target-element:bibitem"><span class="cite-number">61</span></a>]</span><span data-line="119;out/introduction.mdk:56"></span>.
-Unfortunately, if programmers are <span data-line="119;out/introduction.mdk:57"></span><em class="em-star1">undisciplined</em><span data-line="119;out/introduction.mdk:57"></span> in their use of data
-from weakly consistent operations, they can corrupt strongly
-consistent stored data, lowering the consistency of the storage system
-to that of the weakest read or write operation.
+doi:10.1145/2517349.2522731." class="bibref tex-tooltip localref" style="target-element:bibitem"><span class="cite-number">61</span></a>]</span><span data-line="119;out/introduction.mdk:55"></span>.
+<span data-line="119;out/introduction.mdk:56"></span><!--, or when it does not impact the application's correctness
+guarantees (e.g., returning a slightly stale or estimated result is
+acceptable). Some storage systems support this type of adaptable
+consistency [@Terry:13:SLAs;@Stribling:09:WheelFS].--><span data-line="119;out/introduction.mdk:59"></span> Unfortunately,
+using these systems correctly is challenging. If programmers are
+<span data-line="119;out/introduction.mdk:61"></span><em class="em-star1">undisciplined</em><span data-line="119;out/introduction.mdk:61"></span> in their use of data from weakly consistent
+operations, they can corrupt strongly consistent stored data,
+inadvertently lowering the consistency of the storage system to its
+weakest level.
 </p>
-<p class="p indent" data-line="119;out/introduction.mdk:62"><span data-line="119;out/introduction.mdk:62"></span>In this paper, we propose a more disciplined approach to inconsistency
-in the <span data-line="119;out/introduction.mdk:63"></span><em class="em-star1">inconsistent, performance-bound, approximate (IPA)</em><span data-line="119;out/introduction.mdk:63"></span> storage
+<p class="p indent" data-line="119;out/introduction.mdk:66"><span data-line="119;out/introduction.mdk:66"></span>In this paper, we propose a more disciplined approach to inconsistency
+in the <span data-line="119;out/introduction.mdk:67"></span><em class="em-star1">inconsistent, performance-bound, approximate (IPA)</em><span data-line="119;out/introduction.mdk:67"></span> storage
 system. IPA introduces the following concepts:
 </p>
-<ul class="ul list-star loose" data-line="119;out/introduction.mdk:66">
-<li class="li ul-li list-star-li loose-li" data-line="119;out/introduction.mdk:66">
-<p data-line="119;out/introduction.mdk:66"><span data-line="119;out/introduction.mdk:66"></span><em class="em-star1">Consistency Safety</em><span data-line="119;out/introduction.mdk:66"></span>, a new property that ensures that values from
+<ul class="ul list-star loose" data-line="119;out/introduction.mdk:70">
+<li class="li ul-li list-star-li loose-li" data-line="119;out/introduction.mdk:70">
+<p data-line="119;out/introduction.mdk:70"><span data-line="119;out/introduction.mdk:70"></span><em class="em-star1">Consistency Safety</em><span data-line="119;out/introduction.mdk:70"></span>, a new property that ensures that values from
 weakly consistent operations cannot flow into stronger consistency
 operations without explicit endorsement from the programmer.  IPA is
 the first storage system to provide consistency safety.
 </p></li>
-<li class="li ul-li list-star-li loose-li" data-line="119;out/introduction.mdk:71">
-<p data-line="119;out/introduction.mdk:71"><span data-line="119;out/introduction.mdk:71"></span><em class="em-star1">Consistency Types.</em><span data-line="119;out/introduction.mdk:71"></span>, a new type system for which <span data-line="119;out/introduction.mdk:71"></span><em class="em-star1">type safety
-implies consistency safety</em><span data-line="119;out/introduction.mdk:72"></span>. Consistency types define the
+<li class="li ul-li list-star-li loose-li" data-line="119;out/introduction.mdk:75">
+<p data-line="119;out/introduction.mdk:75"><span data-line="119;out/introduction.mdk:75"></span><em class="em-star1">Consistency Types.</em><span data-line="119;out/introduction.mdk:75"></span>, a new type system for which <span data-line="119;out/introduction.mdk:75"></span><em class="em-star1">type safety
+implies consistency safety</em><span data-line="119;out/introduction.mdk:76"></span>. Consistency types define the
 consistency and correctness of the returned value from every IPA
 operation, allowing programmers to reason about their use of
-different consistency levels.  IPA<span data-line="119;out/introduction.mdk:75"></span>&#39;<span data-line="119;out/introduction.mdk:75"></span>s type checker enforces the
+different consistency levels.  IPA<span data-line="119;out/introduction.mdk:79"></span>&#39;<span data-line="119;out/introduction.mdk:79"></span>s type checker enforces the
 disciplined use of IPA consistency types statically at compile time
 by requiring programmers to handle all potential consistency cases,
 or explicitly endorse the propagation of inconsistent values.
 </p></li>
-<li class="li ul-li list-star-li loose-li" data-line="119;out/introduction.mdk:80">
-<p data-line="119;out/introduction.mdk:80"><span data-line="119;out/introduction.mdk:80"></span><em class="em-star1">Error-bounded Consistency.</em><span data-line="119;out/introduction.mdk:80"></span> IPA is a data structure store, like
-Redis<span data-line="119;out/introduction.mdk:81"></span>&nbsp;<span class="citations" style="target-element:bibitem">[<a href="#redis" title="Salvatore Sanfilippo. 
-Redis." class="bibref tex-tooltip localref" style="target-element:bibitem"><span class="cite-number">54</span></a>]</span><span data-line="119;out/introduction.mdk:81"></span> or Riak<span data-line="119;out/introduction.mdk:81"></span>&nbsp;<span class="citations" style="target-element:bibitem">[<a href="#riak" title="Basho Technologies, Inc. 
-Riak." class="bibref tex-tooltip localref" style="target-element:bibitem"><span class="cite-number">11</span></a>]</span><span data-line="119;out/introduction.mdk:81"></span>, allowing it to provide both
+<li class="li ul-li list-star-li loose-li" data-line="119;out/introduction.mdk:84">
+<p data-line="119;out/introduction.mdk:84"><span data-line="119;out/introduction.mdk:84"></span><em class="em-star1">Error-bounded Consistency.</em><span data-line="119;out/introduction.mdk:84"></span> IPA is a data structure store, like
+Redis<span data-line="119;out/introduction.mdk:85"></span>&nbsp;<span class="citations" style="target-element:bibitem">[<a href="#redis" title="Salvatore Sanfilippo. 
+Redis." class="bibref tex-tooltip localref" style="target-element:bibitem"><span class="cite-number">54</span></a>]</span><span data-line="119;out/introduction.mdk:85"></span> or Riak<span data-line="119;out/introduction.mdk:85"></span>&nbsp;<span class="citations" style="target-element:bibitem">[<a href="#riak" title="Basho Technologies, Inc. 
+Riak." class="bibref tex-tooltip localref" style="target-element:bibitem"><span class="cite-number">11</span></a>]</span><span data-line="119;out/introduction.mdk:85"></span>, allowing it to provide both
 traditional performance bounds on storage operations, as well as
 error bounds (e.g., the programmer can bound the returned value to
-within 5<span data-line="119;out/introduction.mdk:84"></span>%<span data-line="119;out/introduction.mdk:84"></span> of the correct value). Within these bounds, IPA
+within 5<span data-line="119;out/introduction.mdk:88"></span>%<span data-line="119;out/introduction.mdk:88"></span> of the correct value). Within these bounds, IPA
 automatically adapts to return a value with the strongest IPA
 consistency type possible under the current system load.
 </p></li></ul>
 
-<p class="p noindent" data-line="119;out/introduction.mdk:88"><span data-line="119;out/introduction.mdk:88"></span>We implement an IPA prototype based on Scala and Cassandra and show
+<p class="p noindent" data-line="119;out/introduction.mdk:92"><span data-line="119;out/introduction.mdk:92"></span>We implement an IPA prototype based on Scala and Cassandra and show
 that IPA allows the programmer to trade off performance and
 consistency, safe in the knowledge that the type system has checked
 the program for consistency safety. We demonstrate experimentally that
 these mechanisms allow applications to dynamically adapt correctness
 and performance to changing conditions with three applications: a
-simple counter, a Twitter clone based on Retwis<span data-line="119;out/introduction.mdk:94"></span>&nbsp;<span class="citations" style="target-element:bibitem">[<a href="#retwis" title="Salvatore Sanfilippo. 
+simple counter, a Twitter clone based on Retwis<span data-line="119;out/introduction.mdk:98"></span>&nbsp;<span class="citations" style="target-element:bibitem">[<a href="#retwis" title="Salvatore Sanfilippo. 
 Design and implementation of a simple Twitter clone using PHP and the Redis key-value store. 
-http://&#8203;redis.&#8203;io/&#8203;topics/&#8203;twitter-&#8203;clone, 2015b." class="bibref tex-tooltip localref" style="target-element:bibitem"><span class="cite-number">55</span></a>]</span><span data-line="119;out/introduction.mdk:94"></span> and a Ticket
-sales service modeled after FusionTicket<span data-line="119;out/introduction.mdk:95"></span>&nbsp;<span class="citations" style="target-element:bibitem">[<a href="#fusionticket" title="Fusion ticket. 
-http://&#8203;fusionticket.&#8203;org." class="bibref tex-tooltip localref" style="target-element:bibitem"><span class="cite-number">1</span></a>]</span><span data-line="119;out/introduction.mdk:95"></span>. 
+http://&#8203;redis.&#8203;io/&#8203;topics/&#8203;twitter-&#8203;clone, 2015b." class="bibref tex-tooltip localref" style="target-element:bibitem"><span class="cite-number">55</span></a>]</span><span data-line="119;out/introduction.mdk:98"></span> and a Ticket
+sales service modeled after FusionTicket<span data-line="119;out/introduction.mdk:99"></span>&nbsp;<span class="citations" style="target-element:bibitem">[<a href="#fusionticket" title="Fusion ticket. 
+http://&#8203;fusionticket.&#8203;org." class="bibref tex-tooltip localref" style="target-element:bibitem"><span class="cite-number">1</span></a>]</span><span data-line="119;out/introduction.mdk:99"></span>. 
 </p><h2 id="sec-background" class="h1" data-line="120;out/background.mdk:1" data-heading-depth="1" style="display:block"><span data-line="120;out/background.mdk:1"></span><span class="heading-before"><span class="heading-label">2</span>.&#8194;</span><span data-line="120;out/background.mdk:1"></span>The Case for Consistency Safety</h2>
 <p class="p noindent" data-line="120;out/background.mdk:3"><span data-line="120;out/background.mdk:3"></span>Unpredictable Internet traffic and unexpected failures force modern
 datacenter applications to trade off consistency for performance. In
